# kinnd

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: auto-label.yaml  doc.yaml  publish.yaml  pytest.yaml  stubs.yaml
dev/: genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
dev/_downloads/1ecaf32698a15da6a6bf0a54b3c5fd6b/: 00_logging.ipynb
dev/_downloads/971f2c33db2baef5789dafc0c9ad4769/: 00_logging.py
dev/_sources/: index.rst.txt  sg_execution_times.rst.txt
dev/api/: index.html  logging.html
dev/changes/: index.html  latest.html
doc/: conf.py  links.inc
doc/api/: index.rst  logging.rst
kinnd/: __init__.py  __init__.pyi
kinnd/commands/: main.py
kinnd/studies/: __init__.py  __init__.pyi
kinnd/studies/listen/: io.py
kinnd/studies/semantics/: __init__.py  __init__.pyi  io.py
kinnd/utils/: __init__.py  __init__.pyi  check.py  paths.py
kinnd/viz/: __init__.py  topo.py
notebooks/: listen-phonemes.ipynb  listen.ipynb  listen_config.yaml  semantics.ipynb  sub-sub-2027_ses-01_task-semantics_ica.fif
scripts/: create_listen_bids.py  create_phonemes_evoked_dataset.py  find_bad_channels_pyprep.py  generate_listen_eeg_list.py  process_listen.py  rename_semantics_files.py  unzip_listen_files.py
tools/: stubgen.py
tutorials/: 00_logging.py
